Add some links to emailbuilder page

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -23,7 +23,7 @@ Dieses Video bietet dir eine Einführung in das Thema:
 .EmailBuilder: Überblick
 video::580717951[vimeo]
 
-Außerdem kannst du einstellen, dass dein plentymarkets System bei bestimmten Ereignissen, z.B. beim Eingehen neuer Bestellungen in deinem plentyShop oder nachdem Kund:innen deinen Newsletter abonniert haben, automatisch E-Mails aus diesen Vorlagen erstellt und an deine Kund:innen versendet.
+Außerdem kannst du einstellen, dass dein plentymarkets System bei bestimmten Ereignissen, z.B. beim Eingehen neuer Bestellungen in deinem plentyShop oder nachdem Kund:innen deinen Newsletter abonniert haben, <<#e-mail-versand-automatisieren, automatisch E-Mails aus diesen Vorlagen>> erstellt und an deine Kund:innen versendet.
 
 [#vorbereitende-einstellungen]
 == Vorbereitende Einstellungen vornehmen
@@ -122,7 +122,7 @@ Die im Benutzerkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konte
 [#ordner-verwalten]
 == Ordner verwalten
 
-Du kannst im EmailBuilder beliebig viele Ordner und Unterordner erstellen. Nachdem der Ordner erstellt ist, kannst du mit einem Klick auf icon:more_vert[set=material] neue Unterordner, neue Vorlagen allgemein und neue Vorlagen für Header und Footer erstellen und die Ordner umbenennen oder löschen.
+Du kannst im EmailBuilder beliebig viele <<#ordner-erstellen, Ordner>> und <<#unterordner-erstellen, Unterordner>> erstellen. Nachdem der Ordner erstellt ist, kannst du mit einem Klick auf icon:more_vert[set=material] neue Unterordner, neue Vorlagen allgemein und neue Vorlagen für Header und Footer erstellen und die Ordner umbenennen oder löschen.
 
 In deinem plentymarkets System befindet sich bereits ein Ordner mit einigen vordefinierten Standardvorlagen. Diese werden weiter unten im Kapitel <<#standardvorlagen-verwenden, Standardvorlagen verwenden>> erläutert.
 
