Add box about addresses to edit-contact.adoc

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -555,6 +555,12 @@ image::crm:kontakte-adresstabelle.png[width=640, height=360, alt=Adresstabelle (
 Klicke auf *Neue Adresse* (icon:add[set=material]) oben rechts, um eine neue Adresse für den Kontakt zu speichern. <<#table-new-address>> listet die verfügbaren Felder der Adresse auf. +
 *_Hinweis:_* Jeder Adressdatensatz bekommt eine fortlaufende ID, die _nicht_ geändert werden kann. Die ID ist dabei jedoch nicht für einen Kontakt fortlaufend, sondern für alle Adressdatensätze, die du in deinem plentymarkets System erstellst.
 
+[NOTE]
+.Bearbeiten von Adressen, die mit Aufträgen verknüpft sind, ist nicht möglich
+====
+Wenn die Adresse mit einem Auftrag verknüpft ist, kannst du die Adresse _nicht_ bearbeiten. Du kannst aber natürlich eine neue Adresse erstellen.
+====
+
 [[table-new-address]]
 .Neue Adresse erstellen
 [cols="1,3"]
@@ -671,6 +677,12 @@ Gib eine `0` für aktiv ein und eine `1` für nicht aktiv.
 ==== Adresse löschen
 
 Mit einem Klick in die Zeile der Adresse öffnet sich der Adressdatensatz. Du kannst sie mit einem Klick auf *Löschen* (icon:delete[set=material]) nach dem Bestätigen der Sicherheitsabfrage löschen.
+
+[NOTE]
+.Löschen von Adressen, die mit Aufträgen verknüpft sind, ist nicht möglich
+====
+Wenn die Adresse mit einem Auftrag verknüpft ist, kannst du die Adresse nicht löschen. Eine Fehlermeldung wird angezeigt.
+====
 
 [#historie]
 === Historie
