--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -441,6 +441,12 @@ image::crm:contacts-address-table.png[width=640, height=360, alt=Address table (
 Click on *New address* (icon:add[set=material]) to save a new address for the contact. <<#table-new-address>> lists the available fields of the address. +
 *_Note:_* After saving, the address data record is given a consecutive ID that _cannot_ be changed. The ID is, however, not consecutive for each contact, but for all address data records that you create in your plentymarkets system.
 
+[NOTE]
+.Not possible to edit addresses that are linked with orders
+====
+If the address is linked with an order, you cannot edit the address. You can, however, create a new address of course.
+====
+
 [[table-new-address]]
 .Creating a new address
 [cols="1,3"]
@@ -557,6 +563,12 @@ Enter `0` for active and `1` for not active.
 ==== Deleting an address
 
 Click in the line of the address to open the address data record. You can delete it by clicking on *Delete* (icon:delete[set=material]) and after confirming the security question.
+
+[NOTE]
+.Not possible to delete addresses that are linked with orders
+====
+If the address is linked with an order, you cannot delete the address. An error message appears.
+====
 
 [#history]
 === History
