--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -30,7 +30,7 @@ include::_includes:page$EA.adoc[]
 *_Wichtig:_* Halte die Reihenfolge der Aktionen ein. Nur so wird die Ereignisaktion korrekt ausgeführt.
 
 ifdef::conrad[]
-image::maerkte:conrad-ea-reihenfolge.png
+image::maerkte:conrad-ea-reihenfolge.png[]
 endif::conrad[]
 |
 |===
