--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -6,7 +6,7 @@ include::_includes:page$EA.adoc[]
 
 [#{market}-ereignisaktion-versandbestaetigung]
 .Ereignisaktion, um Versandbestätigungen an {market} zu melden
-[cols="1,2,2"]
+[cols="1,2a,2"]
 |===
 | *Einstellung*
 | *Option*
