ADD more content to the stock catalogue page

--- a/docs/de-de/modules/daten/pages/warenbestand-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/warenbestand-exportieren.adoc
@@ -1,211 +1,445 @@
 = Warenbestände
-:keywords: Warenbestand exportieren, Export-Format Warenbestand
-:description: Erfahre, wie du mithilfe von Katalogen Warenbestände aus deinem plentymarkets System exportierst.
+:keywords: Warenbestand herunterladen, Warenbestand runterladen, Warenbestand exportieren, Exportieren Warenbestand, Warenbestand Export, Warenbestand-Export, Export Warenbestand, Warenbestandexport, Ware herunterladen, Ware runterladen, Ware exportieren, Exportieren Ware, Ware Export, Ware-Export, Export Ware, Wareexport, Export-Format Warenbestand, Export-Format Warenbestände, Export-Typ Warenbestand, Export-Typ Warenbestände, Standardformat Warenbestand, Standardformat Warenbestände
+:description: Diese Seite beschreibt die Datenfelder und Filter, die dir beim Export von Warenbeständen über das Katalog-Tool zur Verfügung stehen.
 :page-aliases: katalog-warenbestaende.adoc
 :id: 2HVY25P
 :author: team-stock
 
-Diese Handbuchseite enthält Informationen zum Export-Format *Warenbestände*, mit dem du anhand von Katalogen Warenbestandsdaten aus deinem plentymarkets System exportieren kannst.
-Solltest du mit der Funktionsweise der Kataloge noch nicht vertraut sein, informiere dich zunächst auf der Handbuchseite xref:daten:dateiexport.adoc#[Standardformate nutzen]. Dort ist beschrieben, wie du Kataloge erstellst und verwaltest.
+////
+zuletzt bearbeitet 21.04.2022
+////
+
+Diese Seite beschreibt die Datenfelder und Filter, die dir beim Export von Warenbeständen über das Katalog-Tool zur Verfügung stehen.
+Diese Seite dient lediglich als Referenz und setzt voraus, dass du bereits Grundkenntnisse über das xref:daten:dateiexport.adoc#[Katalog-Tool] hast.
+
+[discrete]
+==== Format-Typ: Warenbestände
+
+Der auf dieser Seite beschriebene Format-Typ befindet sich im Menü *Daten » Kataloge*.
+Beim Erstellen eines neuen Katalogs wählst du zuerst das Standardformat aus der oberen Dropdown-Liste.
+Danach kannst du den Format-Typ *Warenbestände* aus der mittleren Dropdown-Liste wählen.
+
+image::daten:katalog-warenbestaende.png[]
 
 [TIP]
-.Kein Export an Marktplätze
+.Was ist ein Standardformat?
 ====
-Bei dem Exportformat *Warenbestände* handelt es sich um ein sog. Standardformat, d.h. ein Format, mit dem du Daten exportieren, aber nicht an einen Marktplatz übertragen kannst.
+
+* *_Definition_*:
+Ein Standardformat wird verwendet, um spezifische Daten aus deinem plentymarkets System zu exportieren.
+Falls nötig, kannst du die Daten anschließend überarbeiten und wieder importieren.
+
+* *_Beispiel_*:
+Stell dir vor, du möchtest im Rahmen einer Wirtschaftsprüfung herausfinden, wie viel Bestand sich zum Jahresende in deinem Lager befand.
+Du könntest eine CSV-Datei mit den Bestandsdaten exportieren.
+
+* *_Abgrenzung_*:
+Beachte, dass Standardformate lediglich Daten aus deinem System exportieren.
+Sie übertragen diese Daten nicht an Marktplätze.
 ====
 
 [#10]
-== Verfügbare Datenfelder
+== Datenfelder
 
-In der folgenden Tabelle findest du alle verfügbaren Datenfelder des Export-Formats *Warenbestände* sowie eine Erläuterung zur Bedeutung dieser Felder.
+Dieses Kapitel enthält eine Liste aller Warenbestand-Datenfelder, die mit dem Katalog-Tool exportiert werden können.
 
-[[tabelle-warenbestaende]]
-.Datenfelder für Warenbestände
-[cols="2,3"]
+:catalogue:
+
+'''
+[#30]
+=== Artikel
+
+[cols="1,3a"]
 |====
-|Datenfeld |Erläuterung
+|Feld |Erläuterung
 
-2+^|*Artikel*
+| *Artikel-ID*
+|
+include::artikel:partial$id.adoc[]
 
-|*Artikel-ID*
-|ID des Artikels
+*_Hinweis_*: Jeder "Export Key" muss eindeutig sein.
+Wenn du also die Artikel-ID und die Varianten-ID zusammen verwendest, dann achte darauf, dass du jedem "Export Key" einen eindeutigen Namen gibst.
+xref:daten:katalog-warenbestaende.adoc#120[Weitere Informationen].
 
-|*Markierung 1*
-|ID der ersten Artikelmarkierung
+| *Markierung 1*; +
+*Markierung 2*
+|Die ID der xref:artikel:markierungen.adoc#100[Artikelmarkierung].
 
-|*Markierung 2*
-|ID der zweiten Artikelmarkierung
+| *Varianten-Tag*
+|Der Name des xref:artikel:markierungen.adoc#400[Tags].
+|====
 
-|*Varianten-Tag*
-|Tag der Variante
+'''
+[#40]
+=== Hersteller
 
-2+^|*Hersteller*
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
 
-|*Hersteller-ID*
-|ID der Artikelhersteller:in
+| *Hersteller-ID*
+|
+include::artikel:partial$hersteller-id.adoc[]
 
-|*Herstellername*
-|Name der Artikelhersteller:in
+| *Herstellername*
+|
+include::artikel:partial$hersteller-name.adoc[]
 
-2+^|*Charge / MHD*
+|====
 
-|*Charge*
+'''
+[#50]
+=== Charge / MHD
+
+//ergänzen
+
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
+
+| *Charge*
 |Charge der Variante
 
-|*MHD*
+| *MHD*
 |Mindesthaltbarkeitsdatum der Variante
+|====
 
-2+^|*Warenbestand*
+'''
+[#60]
+=== Warenbestand
 
-|*Physischer Bestand*
+//ergänzen
+
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
+
+| *Physischer Bestand*
 |Physischer Warenbestand
 
-|*Reservierter Bestand*
+| *Reservierter Bestand*
 |Reservierter Warenbestand
 
-|*Nettobestand*
+| *Nettobestand*
 |Netto-Warenbestand
 
-|*Nachbestellte Menge*
+| *Nachbestellte Menge*
 |Menge des nachbestellten Warenbestands
 
-|*Lagerpriorität*
+| *Lagerpriorität*
 |Priorität des Lagers
 
-|*Durchschnittlicher Einkaufspreis*
+| *Durchschnittlicher Einkaufspreis*
 |Durchschnittlicher EK
 
-|*Durchschnittlicher Verkauf*
+| *Durchschnittlicher Verkauf*
 |Durchschnittlicher Verkauf
 
-2+^|*Lagerort*
+|====
 
-|*Lagerort-ID*
+'''
+[#70]
+=== Lagerort
+
+//ergänzen
+
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
+
+| *Lagerort-ID*
 |ID des Lagerortes
-|*Lagerortmenge*
+
+| *Lagerortmenge*
 |Menge an Bestand, die auf dem Lagerort vorhanden ist
-|*Lagerortname*
+
+| *Lagerortname*
 |Name des Lagerortes
+|====
 
-2+^|*Varianten-Barcode*
+'''
+[#80]
+=== Varianten-Barcode
 
-|*Varianten-Barcode*
+//ergänzen
+
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
+
+| *Varianten-Barcode*
 |Barcode der Variante
+|====
 
-2+^|*Artikelbeschreibung*
+'''
+[#90]
+=== Artikelbeschreibung
 
-|*Artikelname*
-|Name 1 des Artikels
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
 
-2+^|*Variante*
+| *Artikelname*
+|
+include::artikel:partial$name1.adoc[]
 
-|*Varianten-ID*
-|ID der Variante
+|====
 
-|*Ist aktiv*
-|Variante ist aktiv (1 = Ja)
+'''
+[#100]
+=== Variante
 
-|*Variantennummer*
-|Nummer der Variante
+//nested tabelle überschriften raus nehmen in die include-dateien
+//uuid-beschreibung prüfen
+//pakete-berechnungsautomatik-beschreibungen prüfen
 
-|*Modell*
-|Modell der Variante
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
 
-|*Einkaufspreis*
-|EK der Variante
+| *Varianten-ID*
+|Die ID der Variante.
 
-|*UUID der Preiskalkulation*
-|UUID der Preiskalkulation. Beim Erstellen der Kalkulation wird die ID automatisch vergeben. Die ID kann nicht geändert werden. +
-*_Tipp:_* Willst du die UUID kopieren? Öffne dazu die Preiskalkulation und klicke auf die UUID unten links. Die UUID wird in die Zwischenablage kopiert.
+*_Hinweis_*: Jeder "Export Key" muss eindeutig sein.
+Wenn du also die Artikel-ID und die Varianten-ID zusammen verwendest, dann achte darauf, dass du jedem "Export Key" einen eindeutigen Namen gibst.
+xref:daten:katalog-warenbestaende.adoc#120[Weitere Informationen].
 
-|*Variantenname*
-|Name der Variante
+| *Ist aktiv*
+|
+include::artikel:partial$aktiv.adoc[]
 
-|*Zolltarifnummer*
-|Zolltarifnummer der Variante
+| *Variantennummer*
+|
+include::artikel:partial$variantennr.adoc[]
 
-|*Mit berechnetem Paketgewicht*
-|Zeigt an, ob das Gewicht xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird. +
-1 = Berechnungsautomatik ist aktiviert. +
-Leeres Feld = Berechnungsautomatik ist nicht aktiviert.
+| *Modell*
+|
+include::artikel:partial$modell.adoc[]
 
-|*Mit berechnetem Netto-Paketgewicht*
-|Zeigt an, ob das Nettogewicht xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird. +
-1 = Berechnungsautomatik ist aktiviert. +
-Leeres Feld = Berechnungsautomatik ist nicht aktiviert.
+| *Einkaufspreis*
+|
+include::artikel:partial$ek-netto.adoc[]
 
-|*Mit berechnetem Paket-EK*
-|Zeigt an, ob der Einkaufspreis xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird. +
-1 = Berechnungsautomatik ist aktiviert. +
-Leeres Feld = Berechnungsautomatik ist nicht aktiviert.
+| *UUID der Preiskalkulation*
+|UUID der Preiskalkulation.
+Beim Erstellen der Preiskalkulation wird die UUID automatisch vergeben und kann nicht geändert werden.
 
-|*Mit berechnetem Paket-GLDEK*
-|Zeigt an, ob der gleitende Durchschnittseinkaufspreis xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird. +
-1 = Berechnungsautomatik ist aktiviert. +
-Leeres Feld = Berechnungsautomatik ist nicht aktiviert.
+//*_Tipp:_* Willst du die UUID kopieren? Öffne dazu die Preiskalkulation und klicke auf die UUID unten links. Die UUID wird in die Zwischenablage kopiert.
 
-2+^|*Lager*
+| *Variantenname*
+|
+include::artikel:partial$variantenname.adoc[]
 
-|*Lager-ID*
+| *Zolltarifnummer*
+|
+include::artikel:partial$zolltarifnummer.adoc[]
+
+| *Mit berechnetem Paketgewicht*
+|Gibt an, ob das Gewicht xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird.
+
+[cols="1,3"]
+!===
+
+!Zeile ist leer
+!Berechnungsautomatik ist nicht aktiviert.
+
+!`1`
+!Berechnungsautomatik ist aktiviert.
+
+!===
+
+| *Mit berechnetem Netto-Paketgewicht*
+|Gibt an, ob das Nettogewicht xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird.
+
+[cols="1,3"]
+!===
+
+!Zeile ist leer
+!Berechnungsautomatik ist nicht aktiviert.
+
+!`1`
+!Berechnungsautomatik ist aktiviert.
+
+!===
+
+| *Mit berechnetem Paket-EK*
+|Gibt an, ob der Einkaufspreis xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird.
+
+[cols="1,3"]
+!===
+
+!Zeile ist leer
+!Berechnungsautomatik ist nicht aktiviert.
+
+!`1`
+!Berechnungsautomatik ist aktiviert.
+
+!===
+
+| *Mit berechnetem Paket-GLDEK*
+|Gibt an, ob der gleitende Durchschnittseinkaufspreis xref:artikel:multipacks-pakete-sets-verwalten.adoc#2500[automatisch anhand der Bestandteile] berechnet wird.
+
+[cols="1,3"]
+!===
+
+!Zeile ist leer
+!Berechnungsautomatik ist nicht aktiviert.
+
+!`1`
+!Berechnungsautomatik ist aktiviert.
+
+!===
+|====
+
+'''
+[#110]
+=== Lager
+
+//ergänzen
+
+[cols="1,3a"]
+|====
+|Feld |Erläuterung
+
+| *Lager-ID*
 |ID des Lagers
 
-|*Lagername*
+| *Lagername*
 |Name des Lagers
 |====
 
 [#20]
-== Filter hinzufügen
+== Filter
 
-Um nur bestimmte Daten von Warenbeständen zu exportieren, kannst du Filter wählen und somit die Daten eingrenzen. Wie du Filter hinzufügst, erfährst du in xref:daten:kataloge-verwalten.adoc#257[diesem Kapitel].
+Dieses Kapitel enthält eine Liste der Filter, mit denen du einschränken kannst, welche Daten in die Exportdatei aufgenommen werden sollen.
 
-[#30]
-=== Verfügbare Filter
+//In der folgenden Tabelle findest du alle für das Export-Format *Warenbestände* verfügbaren Filter sowie eine Erläuterung zur Funktion des jeweiligen Filters. Du kannst auch mehrere Filter wählen und somit beispielsweise nach Warenbeständen aus einem bestimmten Lager mit einer bestimmten Markierung filtern.
 
-In der folgenden Tabelle findest du alle für das Export-Format *Warenbestände* verfügbaren Filter sowie eine Erläuterung zur Funktion des jeweiligen Filters. Du kannst auch mehrere Filter wählen und somit beispielsweise nach Warenbeständen aus einem bestimmten Lager mit einer bestimmten Markierung filtern.
-
-[[tabelle-filter-warenbestand]]
-.Filter für Warenbestände
-[cols="2,3"]
+[cols="1,3a"]
 |====
 |Filter |Erläuterung
 
-|*Aktiv*
+| *Aktiv*
 |Filtert nach aktiven oder inaktiven Varianten.
 
-|*Markierung 1*
-|Filtert nach der an der Variante gespeicherten Markierung 1.
+| *Markierung 1*; +
+*Markierung 2*
+|Filtert nach der an der Variante gespeicherten Markierung.
 
-|*Markierung 2*
-|Filtert nach der an der Variante gespeicherten Markierung 2.
+//|*Markierung 2*
+//|Filtert nach der an der Variante gespeicherten Markierung 2.
 
-|*Datum*
-|Filtert nach einem bestimmten Datum, das du hier über den Kalender wählen kannst. Dieser Filter ermöglicht es dir somit, Warenbestand zu einem bestimmten Zeitpunkt zu exportieren. +
-*_Hinweis:_* Mit dem Datumsfilter kann lediglich die Bestandsmenge pro Lager, nicht aber pro Lagerort ausgegeben werden. Aktiviere deshalb die folgenden Datenfelder _nicht_: *Lagerort*, *Lagerort-ID*, *Lagerortmenge*, *Lagerortname*. +
-Die Bestandsmenge für das gewählte Datum wird anschließend im Datenfeld *Physischer Bestand* des Ordners *Warenbestand* angezeigt.
+| *Datum*
+|Filtert nach einem bestimmten Datum, das du hier über den Kalender wählen kannst. Dieser Filter ermöglicht es dir somit, Warenbestand zu einem bestimmten Zeitpunkt zu exportieren.
+Die Bestandsmenge für das gewählte Datum wird anschließend im Datenfeld xref:daten:katalog-warenbestaende.adoc#60[Physischer Bestand] angezeigt.
 
-|*Hersteller*
+*_Hinweis_*: Es ist nur möglich, maximal 3 Monate in die Vergangenheit zu filtern.
+
+*_Hinweis_*: Dieser Filter greift _nicht für Artikelpakete_.
+
+*_Hinweis_*: Mit dem Datumsfilter kann lediglich die Bestandsmenge pro Lager, nicht aber pro Lagerort ausgegeben werden.
+Aktiviere deshalb die folgenden Datenfelder _nicht_:
+
+* *Lagerort*
+* *Lagerort-ID*
+* *Lagerortmenge*
+* *Lagerortname*
+
+| *Hersteller*
 |Filtert nach Hersteller:in.
 
-|*Lager*
+| *Lager*
 |Filtert nach Varianten aus dem gewählten Lager. +
+
 *_Hinweis:_* Wählst du kein Lager, wird automatisch der Bestand des Lagers mit der kleinsten ID gewählt.
 
-|*Leere Lagerbestandseinträge ausblenden:* +
-*Lagerbestandseinträge von 0 nach definiertem Zeitraum ausblenden*
+| *Leere Lagerbestandseinträge ausblenden*
 |Blendet alle Lagerbestandseinträge von 0 aus, die den im System definierten Zeitraum überschritten haben.
 
-|*Leere Lagerbestandseinträge ausblenden:* +
-*Alle Lagerbestandseinträge von 0 ausblenden*
-|Blendet alle Lagerbestandseinträge von 0 aus.
+//| *Leere Lagerbestandseinträge ausblenden:* +
+//*Lagerbestandseinträge von 0 nach definiertem Zeitraum ausblenden*
+//|Blendet alle Lagerbestandseinträge von 0 aus, die den im System definierten Zeitraum überschritten haben.
 
-|*Gruppieren nach*
+//|*Leere Lagerbestandseinträge ausblenden:* +
+//*Alle Lagerbestandseinträge von 0 ausblenden*
+//|Blendet alle Lagerbestandseinträge von 0 aus.
+
+| *Gruppieren nach*
 |Ermöglicht die Gruppierung nach Lager. Der Bestand einer Variante wird gesammelt, d.h. pro Lager in einer Zeile angezeigt (und nicht nach Lagerort, MHD oder Charge).
 
-|*Artikelpaket*
-|Ermöglicht es, nach xref:artikel:multipacks-pakete-sets.adoc#2000[Artikelpaketen] zu filtern. +
-Je nachdem, was du exportieren möchtest, kannst du zwischen den folgenden Optionen wählen: +
-*Nicht Teil eines Pakets*: Varianten, die nicht Teil eines Artikelpakets sind, werden exportiert. +
-*Paket*: Nur komplette Artikelpakete werden exportiert. +
-*Teil eines Pakets*: Bestandteile eines Artikelpakets werden exportiert.
+| *Artikelpaket*
+|Ermöglicht es, nach xref:artikel:multipacks-pakete-sets.adoc#2000[Artikelpaketen] zu filtern.
+Je nachdem, was du exportieren möchtest, kannst du zwischen den folgenden Optionen wählen:
+
+* *Nicht Teil eines Pakets*: Varianten, die nicht Teil eines Artikelpakets sind, werden exportiert.
+* *Paket*: Nur komplette Artikelpakete werden exportiert.
+* *Teil eines Pakets*: Bestandteile eines Artikelpakets werden exportiert.
 
 |====
+
+[#120]
+== Fragen und Antworten
+
+[.collapseBox]
+.*Was bedeutet "Export Key"?*
+--
+
+Die "Export Keys" sind die Namen der Spaltenüberschriften, die in deiner Exportdatei erscheinen werden.
+Jeder "Export Key" muss eindeutig sein.
+
+* *_Negatives Beispiel_*: Du verwendest die Datenfelder xref:daten:katalog-warenbestaende.adoc#30[Artikel-ID] und xref:daten:katalog-warenbestaende.adoc#100[Varianten-ID].
+Du gibst beiden "Export Keys" den Namen "id".
+Dies führt dazu, dass die Exportdatei nur eine der beiden IDs enthält.
+In der Exportdatei fehlt eine Spalte.
+* *_Positives Beispiel_*: Du verwendest die Datenfelder xref:daten:katalog-warenbestaende.adoc#30[Artikel-ID] und xref:daten:katalog-warenbestaende.adoc#100[Varianten-ID].
+Du gibst einem "Export Key" den Namen "VariationID" und einem den Namen "ItemID".
+
+image::daten:katalog-export-keys.png[]
+
+--
+
+[.collapseBox]
+.*Wie exportiere ich die Datei?*
+--
+
+. Klicke auf icon:file_download[set=material] in der Symbolleiste oben. +
+→ Der Export wird gestartet und läuft im Hintergrund.
+Du kannst während des Exportvorgangs weiter arbeiten.
+. Nach einiger Zeit (ca. 30-60 Minuten) erscheint eine Benachrichtigung im Notification-Center (icon:notifications_none[set=material]).
+. Klicke in der Notification auf icon:link[set=material] *Herunterladen*.
+
+image::daten:katalog-export.gif[]
+
+* xref:daten:kataloge-verwalten.adoc#260[Weitere Informationen zum Export]
+* xref:daten:kataloge-verwalten.adoc#255[Alternativ: Vorschau exportieren]
+
+--
+
+[.collapseBox]
+.*In meiner Exportdatei fehlt eine Spalte. Warum?*
+--
+
+Möglicherweise hast du mehrere Datenfelder mit demselben "Export Key".
+Jeder "Export Key" muss eindeutig sein.
+
+* *_Negatives Beispiel_*: Du verwendest die Datenfelder xref:daten:katalog-warenbestaende.adoc#30[Artikel-ID] und xref:daten:katalog-warenbestaende.adoc#100[Varianten-ID].
+Du gibst beiden "Export Keys" den Namen "id".
+Dies führt dazu, dass die Exportdatei nur eine der beiden IDs enthält.
+In der Exportdatei fehlt eine Spalte.
+* *_Positives Beispiel_*: Du verwendest die Datenfelder xref:daten:katalog-warenbestaende.adoc#30[Artikel-ID] und xref:daten:katalog-warenbestaende.adoc#100[Varianten-ID].
+Du gibst einem "Export Key" den Namen "VariationID" und einem den Namen "ItemID".
+
+image::daten:katalog-export-keys.png[]
+
+--
+
+[.collapseBox]
+.*Kann ich die Datei überarbeiten und dann wieder importieren?*
+--
+
+Ja.
+Exportiere die Datei im CSV- oder TXT-Format.
+Dann bearbeite die Datei und importiere sie erneut.
+Beachte, dass das xref:daten:ElasticSync.adoc#[Import-Tool] nur die Dateitypen CSV und TXT akzeptiert.
+
+--
