--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -6,7 +6,7 @@
 include::partial$hinweis-offene-beta.adoc[]
 include:partial$hinweis-voraussetzungen.adoc[]
 
-Die Pickliste ist eins der wichtigsten Dokumente für dein Lagerpersonal, denn sie enthält alle Informationen darüber, welche Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
+Die Pickliste ist ein wichtiges Dokumente für dein Lagerpersonal, denn sie enthält alle Informationen darüber, wie viele Artikel von welchen Lagerorten geholt werden müssen, um einen Auftrag abzuwickeln.
 
 Mit plentyWarehouse kann das Lagerpersonal Picklisten, die xref:auftraege:pickliste.adoc#300[in deinem plentymarkets System erstellt] wurden, bequem auf mobilen Geräten suchen, öffnen und bearbeiten.
 
@@ -101,6 +101,9 @@ icon:map-signs[] *_Oder:_*: Finde die Kachel zu *Picklisten* im Bereich *Funktio
 
 [#320]
 === Artikel picken
+
+Sobald du eine Pickliste geöffnet hast, wird dir direkt die Liste der Artikel angezeigt, die gepickt werden müssen. 
+Für jeden Artikel ist unter anderem der Lagerort angegeben, auf dem er sich befindet, sowie die Menge des Artikels, die gepickt werden muss.
 
 
 
