ADD more work to the catalogue stock page de

--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -843,9 +843,8 @@ Wähle die gewünschten Kalkulationen (icon:check-square[role="blue"]) und klick
 So erkennst du die aktiven und inaktiven Kalkulationen auf einen Blick.
 
 | *UUID*
-|UUID der Preiskalkulation.
-Beim Erstellen der Kalkulation wird die ID automatisch vergeben.
-Die ID kann nicht geändert werden.
+|Die UUID der Preiskalkulation.
+Beim Erstellen der Preiskalkulation wird die UUID automatisch vergeben und kann nicht geändert werden.
 
 *_Tipp_*: Willst du die UUID kopieren?
 Öffne dazu die Preiskalkulation und klicke auf die UUID unten links.
