describe link data field - DE+EN

--- a/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
@@ -69,7 +69,12 @@ _or_
 
 | Link
 | yes
-| *URL path* of the item depending on the selected client
+| * *Variantion » Ceres Product URL* for the default client (store) +
+*_Important:_* Only map this field if you have a Ceres shop.
+
+_or_
+
+* *Item text » URL path* for any other client (store)
 
 | Image URL
 | no
