Add active description (edit-contact.adoc)

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -292,6 +292,10 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 | *Newsletter*
 |Zeigt an, ob der Kontakt den Newsletter erhält (icon:toggle_on[set=material, role=skyBlue]). Um das Newsletter-Abonnement für den Kontakt zu deaktivieren, klicke auf icon:toggle_off[set=material, role=darkGrey].
 
+| *Aktiv*
+|Standardmäßig ist der Kontakt aktiv (icon:toggle_on[set=material, role=blue]). Das bedeutet, der Kontakt ist für den eingestellten Mandanten _nicht_ gesperrt und kann sich in deinem plentyShop einloggen. +
+Wenn du auf die Schaltfläche klickst (icon:toggle_off[set=material, role=grey]), ist der Kontakt nicht aktiv. Das bedeutet, der Kontakt ist für den eingestellten Mandanten _gesperrt_ und kann sich _nicht_ in deinem plentyShop einloggen.
+
 | *Rechnung erlauben* / *Lastschrift erlauben*
 |Wenn du die beiden Zahlungsarten *Rechnung* und *Lastschrift* bereits in der xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse] erlaubt hast, musst du hier _keine_ Einstellungen vornehmen. Denn: Die Einstellungen in der Kundenklasse haben Priorität vor den Einstellungen im Kontaktdatensatz. +
 
