--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -11,7 +11,7 @@ Das Menü *CRM » Messenger (Testphase)* ist wie folgt aufgebaut:
 
 // TODO: farblich markierten Screenshot einfügen.
 
-* *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blauer Hintergrund) wird im Hauptfenster rechts angezeigt. Klicke auf icon:bars[], um die Navigationsleiste ein- und auszublenden. +
+* *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blauer Hintergrund) wird im Hauptfenster rechts angezeigt. Klicke auf icon:menu[set=material], um die Navigationsleiste ein- und auszublenden. +
 ** Verfügbare Bereiche in der Navigation: icon:add[set=material] *Neue Nachricht*, Posteingang, <<#neue-nachrichten, Neue Nachrichten>>, <<#meine-nachrichten, Meine Nachrichten>>, <<#papierkorb, Papierkorb>>.
 * *Toolbar*: Hier kannst du nach <<#nachricht-suchen, Nachrichten suchen>>, die <<#spalten-konfigurieren, Spalten in der Übersicht anpassen>>, die Ergebnisse, die du pro Seite angezeigt haben möchtest, einstellen, und durch die Seiten mit den Nachrichten klicken.
 * *Hauptfenster*: Hier wird der aktuell geöffnete Bereich angezeigt. +
@@ -187,15 +187,15 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |Klicke auf icon:attach_file[set=material], um deiner Nachricht Anhänge hinzuzufügen. Wähle beliebig viele Anhänge von deinem Computer aus. +
 Die folgenden Dateitypen sind als Anhang in der Nachricht zulässig: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
-| *In Flüster-Modus umschalten* (icon:visibility[set=material] / icon:visibility_off[set=material, role=blue])
+| *In Flüster-Modus umschalten* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
 // in der UI doch wieder umbenennen in "Flüstern". oder kann man die Tooltiptexte umbenennen, wenn man auf das Auge klickt.
-|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visiblity_off[set=material, role=blue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
+|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visiblity_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
 In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargestellt. +
 *_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kann die Schaltfläche *Abrechnen* nicht mehr aktiviert werden.
 
 | *Tags für Nachricht* (icon:local_offer[set=material])
-|Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=blue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
-*_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=blue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
+|Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=skyBlue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
+*_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=skyBlue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
 *_Wichtig:_* Damit du die Nachricht abrechnen kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
 
 | *Abrechnen* (icon:more_vert[set=material)])
@@ -207,7 +207,7 @@ In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargeste
 Klicke auf icon:pause_circle[set=material], um den Timer anzuhalten bzw. auf icon:play_circle[set=material], damit die Zeit weiterläuft.
 
 | *Inboxen verwalten*
-|Mit einem Klick auf icon:edit[set=material] *Inboxen verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet, wo du die Inboxen über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten kannst.
+|Mit einem Klick auf icon:edit[set=material] *Inboxen verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet. Hier kannst du die Inboxen über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten.
 // Inboxen umbenennen in Posteingang?
 
 | _Name der aktuell gewählten Inbox_
@@ -215,7 +215,7 @@ Klicke auf icon:pause_circle[set=material], um den Timer anzuhalten bzw. auf ico
 
 | *SENDEN*
 |Mit einem Klick auf icon:forward_to_inbox[set=material] *SENDEN* wird die Nachricht gesendet. +
-*_Hinweis:_* Wenn du die Nachricht abrechnest, heißt diese Schaltfläche icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. Wenn du die Nachricht flüsterst, heißt diese Schaltfläche icon:visibility_off[set=material] *FLÜSTERN*.
+*_Hinweis:_* Wenn du die Nachricht abrechnest, ändert sich der Name der Schaltfläche in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. Wenn du die Nachricht flüsterst, ändert sich der Name der Schaltfläche in icon:visibility_off[set=material] *FLÜSTERN*.
 
 |====
 
@@ -271,10 +271,10 @@ Verfügbare Werte: *Erledigt* und *Nicht erledigt*.
 // kann man mehrere IDs kommasepariert eingeben und danach suchen?
 
 | *E-Mail*
-|Gib eine E-Mail-Adresse ein, um nach Konversationen zu suchen, in denen diese E-Mail-Adresse auftaucht.
+|Gib eine E-Mail-Adresse ein, um nach Konversationen zu suchen, in denen diese E-Mail-Adresse vorkommt.
 
 | *Tags*
-|Wähle (icon:check-square[role="blue"]) Tags, um nach Konversationen mit diesen <<#tags-messenger, Tags>> zu suchen.
+|Wähle (icon:check_box[set=material, role=skyBlue]) Tags, um nach Konversationen mit diesen <<#tags-messenger, Tags>> zu suchen.
 
 | *Zurücksetzen*
 |Setzt die gewählten Filtereinstellungen zurück.
@@ -298,8 +298,8 @@ Aktuellen Filter speichern:
 . Klicke auf icon:bookmark_border[set=material] *Aktuellen Filter speichern*.
 . Gib einen Namen für den Filter ein.
 . Entscheide, ob
-** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle-on[role="blue"])
-** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle-on[role="blue"]).
+** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle_on[set=material, role=skyBlue])
+** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle_on[set=material, role=skyBlue]).
 . Klicke auf *SPEICHERN*. +
 → Der Filter erscheint nun unter *Gespeicherte Filter* (icon:bookmarks[set=material]).
 
@@ -325,9 +325,7 @@ Damit du einen häufig verwendeten Filter nicht jedes Mal beim Öffnen des Menü
 
 Du kannst einen Filter direkt beim Erstellen als Standard festlegen wie im Kapitel <<#aktuellen-filter-speichern, Aktuellen Filter speichern>> beschrieben oder du legst den Filter nachträglich aus der Übersicht heraus als Standard fest.
 
-Klicke in der Zeile des gespeicherten Filters auf icon:star-o[] *Als Standard festlegen*.
-
-Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star[] *Nicht als Standard verwenden*.
+Klicke in der Zeile des gespeicherten Filters auf icon:star[set=material] *Als Standard festlegen*. Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star_outline[set=material] *Nicht als Standard verwenden*.
 
 [#spalten-konfigurieren]
 === Spalten konfigurieren
@@ -337,7 +335,7 @@ In der Übersicht des Messenger kannst du dir die folgenden Spalten anzeigen las
 * Auswahl
 ** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 * Status
-** Zeigt mit dem Symbol icon:circle[role="blue"] an, dass die Nachricht noch ungelesen ist. 
+** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
 * Abgekürzte ID
 * Herkunft
 ** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
@@ -405,7 +403,7 @@ Konversation als gelesen markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als gelesen markieren möchtest, auf icon:more_vert[set=material].
 . Klicke auf icon:mark_email_read[set=material] *Konversation als gelesen markieren*. +
-→ Die Zeile der Konversation ist nicht mehr in Fettdruck dargestellt und der blaue Punkt icon:circle[role="blue"] am Zeilenanfang verschwindet.
+→ Die Zeile der Konversation ist nicht mehr in Fettdruck dargestellt und der blaue Punkt icon:circle[set=material, role=skyBlue] am Zeilenanfang verschwindet.
 
 [#konversation-als-ungelesen-markieren]
 ==== Konversation als ungelesen markieren
@@ -418,7 +416,7 @@ Konversation als ungelesen markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als ungelesen markieren möchtest, auf icon:more_vert[set=material].
 . Klicke auf icon:mark_email_unread[set=material] *Konversation als ungelesen markieren*. +
-→ Die Zeile der Konversation wird in Fettdruck dargestellt und ein blauer Punkt icon:circle[role="blue"] erscheint am Zeilenanfang.
+→ Die Zeile der Konversation wird in Fettdruck dargestellt und ein blauer Punkt icon:circle[set=material, role=skyBlue] erscheint am Zeilenanfang.
 
 [#kontextmenue-tags-konversation]
 === Tags einer Konversation zuweisen
@@ -435,7 +433,7 @@ Tags einer Konversation zuweisen:
 . Klicke auf icon:local_offer[set=material] *Tags für Konversation*, um eine Liste aller bereits für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* <<#tags-messenger, erstellten>> Tags zu sehen. +
 // "Tags für Konversation" überall anpassen, sobald es in der UI angepasst wurde
 *_Tipp:_* Wenn du sehr viele Tags für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* erstellt hast, gib den Namen des Tags in das Suchfeld *Nach Tag suchen* ein.
-. Wähle (icon:check-square[role="blue"]) die Tags, die du der Konversation zuweisen möchtest. +
+. Wähle (icon:check_box[set=material, role=skyBlue]) die Tags, die du der Konversation zuweisen möchtest. +
 → Der Tag wird der Konversation zugewiesen und du siehst den Tag in der Übersicht in der Spalte *Tags*.
 
 [#tag-hinzufuegen]
@@ -482,7 +480,7 @@ Konversation als erledigt markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als erledigt markieren möchtest, auf icon:more_vert[set=material].
 . Klicke auf icon:task[set=material] *Konversation als erledigt markieren*. +
-→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=blue] angezeigt.
+→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] angezeigt.
 
 [#kontextmenue-als-nicht-erledigt-markieren]
 ==== Konversation als nicht erledigt markieren
@@ -495,7 +493,7 @@ Konversation als nicht erledigt markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als nicht erledigt markieren möchtest, auf icon:more_vert[set=material].
 . Klicke auf icon:remove_done[set=material] *Konversation als nicht erledigt markieren*. +
-→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=blue] entfernt.
+→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] entfernt.
 
 [#kontextmenue-konversation-abonnieren-nicht-abonnieren]
 === Konversation abonnieren / nicht mehr abonnieren
@@ -564,12 +562,12 @@ Nachricht abrechnen:
 . Klicke auf icon:local_offer[set=material], um der Nachricht Tags zuzuweisen. +
 *_Wichtig:_* Um Nachrichten abrechnen zu können, musst du im Menü *Einrichtung » Einstellungen » Tags* ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellt haben.
 . Klicke auf icon:more_vert[set=material].
-. Aktiviere die Schaltfläche *Abrechnen* (icon:toggle_on[set=material, role=blue]).
+. Aktiviere die Schaltfläche *Abrechnen* (icon:toggle_on[set=material, role=skyBlue]).
 . Klicke auf icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. +
 → Das Fenster *Abrechnen und senden* öffnet sich.
 . Du siehst hier im Feld *Timer* die Zeit, die der Timer bisher aufgezeichnet hat. 
 . Im Feld *Minuten* kannst du den Wert ggf. anpassen.
-. Aktiviere das Feld *Minuten abrechnen* (icon:check_box[set=material, role=blue]).
+. Aktiviere das Feld *Minuten abrechnen* (icon:check_box[set=material, role=skyBlue]).
 . Klicke auf *Bestätigen*.
 
 // TODO: Screenshot von abgerechneter Nachricht einfügen.
@@ -601,7 +599,7 @@ Tags einer Nachricht zuweisen:
 . Öffne die Nachricht mit einem Klick in die Zeile der Nachricht.
 . Klicke auf icon:local_offer[set=material] *Tags*, um eine Liste aller bereits für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* <<#tags-messenger, erstellten>> Tags zu sehen. +
 *_Tipp:_* Wenn du sehr viele Tags für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* erstellt hast, gib den Namen des Tags in das Suchfeld *Nach Tag suchen* ein.
-. Wähle (icon:check-square[role="blue"]) die Tags, die du der Nachricht zuweisen möchtest. 
+. Wähle (icon:check_box[set=material, role=skyBlue]) die Tags, die du der Nachricht zuweisen möchtest. 
 
 // FRAGE: Kann man hier wirklich nur einer einzelnen Nachricht einen Tag zuweisen oder bekommt dann die gesamte Konversation auch den Tag zugewiesen? Wenn nur die Nachricht den Tag erhält, wie verhält es sich dann mit den Filtern in der Suche? Wird der Tag an einzelnen Nachrichten in der Suche berücksichtigt? 
 
@@ -627,7 +625,7 @@ Einzelne Nachricht löschen:
 [#gruppenfunktion]
 == Gruppenfunktion nutzen
 
-Sobald du eine Nachricht in der Übersicht markiert hast (icon:check-square[role="blue"]), werden die verschiedenen Schaltflächen sichtbar (siehe <<#image-messenger-group-functions-conversations>>). In <<#table-group-functions-messenger>> sind die Bedienelemente aus der Gruppenfunktion sowie deren Erläuterungen aufgelistet.
+Sobald du eine Nachricht in der Übersicht markiert hast (icon:check_box[set=material, role=skyBlue]), werden die verschiedenen Schaltflächen sichtbar (siehe <<#image-messenger-group-functions-conversations>>). In <<#table-group-functions-messenger>> sind die Bedienelemente aus der Gruppenfunktion sowie deren Erläuterungen aufgelistet.
 
 [[image-messenger-group-functions-conversations]]
 .Gruppenfunktion in der Übersicht
@@ -678,7 +676,7 @@ Im Ordner *Neue Nachrichten* des Messengers kannst du dir die folgenden Spalten 
 * Auswahl
 ** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 * Status
-** Zeigt mit dem Symbol icon:circle[role="blue"] an, dass die Nachricht noch ungelesen ist. 
+** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
 * Abgekürzte ID
 * Herkunft
 ** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
@@ -718,7 +716,7 @@ Im Ordner *Meine Nachrichten* des Messengers kannst du dir die folgenden Spalten
 * Auswahl
 ** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 * Status
-** Zeigt mit dem Symbol icon:circle[role="blue"] an, dass die Nachricht noch ungelesen ist. 
+** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
 * Abgekürzte ID
 * Herkunft
 ** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
@@ -760,7 +758,7 @@ In Papierkorb des Messengers kannst du dir die folgenden Spalten anzeigen lassen
 * Auswahl
 ** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 * Status
-** Zeigt mit dem Symbol icon:circle[role="blue"] an, dass die Nachricht noch ungelesen ist. 
+** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
 * Abgekürzte ID
 * Herkunft
 ** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
