--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -35,7 +35,9 @@ After you have set up Etsy in plentymarkets, data is exchanged with the market i
 | once a day
 
 | Order import
-| Hourly
+| Hourly +
+*_Note:_* Orders are always assigned to the default client (store).
+
 |====
 
 [#250]
@@ -79,6 +81,8 @@ Prior to setting up Etsy in plentymarkets, you have to set the setting *Renewal 
 === Activating the interface
 
 First, the interface has to be activated in the *Setup » Markets » Etsy » Authentication* menu. This gives plentymarkets access to your Etsy account.
+
+* Orders are always assigned to the default client (store).
 
 [.instruction]
 Activating the interface:
