--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -55,7 +55,7 @@ Kontakt suchen:
 |Gib die Telefonnummer ein, um nach dem Kontakt mit genau dieser Telefonnummer zu suchen. Es kann auch nach Teilen der Telefonnummer gesucht werden. Gib mindestens 3 Ziffern ein.
 
 | *Tags*
-|Wähle (icon:check-square[role="blue"]) einen Tag, um nur Kontakte, denen dieses Tag zugeordnet ist, anzuzeigen. Du kannst nach einem oder mehreren Tags gleichzeitig filtern.
+|Wähle (icon:check_box[set=material, role=blue]) einen Tag, um nur Kontakte, denen dieses Tag zugeordnet ist, anzuzeigen. Du kannst nach einem oder mehreren Tags gleichzeitig filtern.
 
 | *Land*
 |Wähle ein Land, um nur nach Kontakten aus diesem Land zu suchen. Das Land ist in den Kontaktdaten gespeichert. +
@@ -99,8 +99,8 @@ Aktuellen Filter speichern:
 . Klicke auf icon:bookmark_border[set=material] *Aktuellen Filter speichern*.
 . Gib einen Namen für den Filter ein.
 . Entscheide, ob
-** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle-on[role="blue"])
-** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle-on[role="blue"]).
+** dieser <<#filter-als-standard, Filter als Standard>> festgelegt werden soll (icon:toggle_on[set=material, role=skyBlue])
+** dieser Filter für alle Benutzer:innen erstellt werden soll (icon:toggle_on[set=material, role=skyBlue]).
 . Klicke auf *SPEICHERN*. +
 → Der Filter erscheint nun unter *Gespeicherte Filter* (icon:bookmarks[set=material]).
 
@@ -126,9 +126,7 @@ Damit du einen häufig verwendeten Filter nicht jedes Mal beim Öffnen des Menü
 
 Du kannst einen Filter direkt beim Erstellen als Standard festlegen wie im Kapitel <<#aktuellen-filter-speichern, Aktuellen Filter speichern>> beschrieben oder du legst den Filter nachträglich aus der Übersicht heraus als Standard fest.
 
-Klicke in der Zeile des gespeicherten Filters auf icon:star-o[] *Als Standard festlegen*.
-
-Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star[] *Nicht als Standard verwenden*.
+Klicke in der Zeile des gespeicherten Filters auf icon:star_border[set=material] *Als Standard festlegen*. Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star[set=material] *Nicht als Standard verwenden*.
 
 [#spalten-konfigurieren]
 == Spalten in der Übersicht konfigurieren
@@ -176,7 +174,7 @@ Klicke in der Übersicht oben rechts auf *Spalten konfigurieren* icon:settings[s
 [#kontextmenue-uebersicht]
 == Kontextmenü in der Übersicht 
 
-Mit einem Klick auf icon:more_vert[set=material] in der Zeile eines Kontakts in der Übersicht, öffnet sich das Kontextmenü. 
+Klicke auf icon:more_vert[set=material] in der Zeile eines Kontakts in der Übersicht, um das Kontextmenü zu öffnen.
 
 [[image-contact-context-menu]]
 .Kontextmenü in der Übersicht
