ADD note that only admins can create new views; as requested in the forum

--- a/docs/en-gb/modules/item/pages/detail-view.adoc
+++ b/docs/en-gb/modules/item/pages/detail-view.adoc
@@ -33,6 +33,16 @@ But what if the main window is empty?
 Or what if you’re not happy with how the item details are arranged?
 You can xref:item:detail-view.adoc#200[create a new detail view] and customise it to meet your needs.
 
+[TIP]
+.Do you have admin rights?
+======
+Only xref:business-decisions:user-accounts-access.adoc#[admin users] can create and edit views.
+If you are not an admin:
+
+. Turn to someone with admin rights.
+. Ask them to xref:item:detail-view.adoc#300[create the necessary views] and xref:item:detail-view.adoc#900[assign them to your user account].
+======
+
 [#300]
 === Creating a new view
 
@@ -303,6 +313,19 @@ The drop-down list with views (default view and custom views) is not visible in 
 It only appears once you have opened an item data record.
 
 image::item:default-view.png[]
+
+--
+
+[.collapseBox]
+.*I can't create a new view. Why not?*
+--
+
+Do you have admin rights?
+Only xref:business-decisions:user-accounts-access.adoc#[admin users] can create and edit views.
+If you are not an admin:
+
+. Turn to someone with admin rights.
+. Ask them to xref:item:detail-view.adoc#300[create the necessary views] and xref:item:detail-view.adoc#900[assign them to your user account].
 
 --
 
