--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -34,6 +34,16 @@ Was aber, wenn das Hauptfenster leer ist?
 Oder was, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
 Du kannst eine neue Detailansicht erstellen und sie an deine Bedürfnisse anpassen.
 
+[TIP]
+.Hast du Admin-Rechte?
+======
+Nur xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Admin-Nutzer] können Ansichten erstellen und bearbeiten.
+Falls du kein Admin bist:
+
+. Wende dich an eine Person mit Admin-Rechten.
+. Bitte sie, die erforderlichen xref:artikel:detailansicht.adoc#300[Ansichten zu erstellen] und sie deinem xref:artikel:detailansicht.adoc#900[Benutzerkonto zuzuweisen].
+======
+
 [#300]
 === Neue Ansicht erstellen
 
@@ -304,6 +314,19 @@ Die Dropdown-Liste mit Ansichten (Standardansicht und eigene Ansichten) ist nich
 Sie erscheint erst, nachdem du einen Artikeldatensatz geöffnet hast.
 
 image::artikel:standardansicht.png[]
+
+--
+
+[.collapseBox]
+.*Ich kann keine neue Ansicht erstellen. Warum nicht?*
+--
+
+Hast du Admin-Rechte?
+Nur xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Admin-Nutzer] können Ansichten erstellen und bearbeiten.
+Falls du kein Admin bist:
+
+. Wende dich an eine Person mit Admin-Rechten.
+. Bitte sie, die erforderlichen xref:artikel:detailansicht.adoc#300[Ansichten zu erstellen] und sie deinem xref:artikel:detailansicht.adoc#900[Benutzerkonto zuzuweisen].
 
 --
 
