--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -182,44 +182,44 @@ image::crm:kontakte-neu-kontexmenue.png[width=640, height=360]
 
 Das Kontextmenü bietet dir einen Schnellzugriff auf die folgenden Menüs und Funktionen:
 
-* icon:shopping_cart[set=material] Aufträge
+* icon:shopping_cart[set=material] *Aufträge*
 
-** Aufträge
+** *Aufträge*
 *** Öffnet die Auftragsübersicht des Kontakts im Menü *Aufträge » Aufträge bearbeiten*.
 
-** Neuer Auftrag
+** *Neuer Auftrag*
 *** Öffnet den Bereich *Neuer Auftrag* im Menü *Aufträge » Aufträge bearbeiten*. Der Auftragstyp *Auftrag* und die Rechnungsadresse des Kontakts sind bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten] im Kapitel xref:auftraege:auftraege-verwalten.adoc#240[beta: Auftrag oder Angebot aus der Kontaktübersicht anlegen].
 
-** Neues Angebot
+** *Neues Angebot*
 *** Öffnet den Bereich *Neuer Auftrag* im Menü *Aufträge » Aufträge bearbeiten*. Der Auftragstyp *Angebot* und die Rechnungsadresse des Kontakts sind bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten] im Kapitel xref:auftraege:auftraege-verwalten.adoc#240[beta: Auftrag oder Angebot aus der Kontaktübersicht anlegen].
 
-** Neuer Auftrag [beta]
+** *Neuer Auftrag [Beta]*
 *** Öffnet die neue Bedienoberfläche zum Anlegen eines neuen Auftrags. Der Auftragstyp *Auftrag*, die Rechnungsadresse und die Lieferadresse des Kontakts sind bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten] im Kapitel xref:auftraege:auftraege-verwalten.adoc#240[beta: Auftrag oder Angebot aus der Kontaktübersicht anlegen].
 
-** Neues Angebot [beta]
+** *Neues Angebot [Beta]*
 *** Öffnet die neue Bedienoberfläche zum Anlegen eines neuen Angebots. Der Auftragstyp *Angebot*, die Rechnungsadresse und die Lieferadresse des Kontakts sind bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten] im Kapitel xref:auftraege:auftraege-verwalten.adoc#240[beta: Auftrag oder Angebot aus der Kontaktübersicht anlegen].
 
-** Neues Abonnement [beta]
+** *Neues Abonnement [Beta]*
 *** Öffnet ein neues Abonnement im Menü *Aufträge » Abonnement (Testphase)*. Die Rechnungsadresse und die Lieferadresse des Kontakts sind bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:auftraege:abonnement.adoc#[Abonnement].
 
-* icon:event_note[set=material] Neues Ticket
+* icon:event_note[set=material] *Neues Ticket*
 
 ** Öffnet den Bereich *Neues Ticket* im Menü *CRM » Ticketsystem*. Die Kontakt-ID, die Firma (falls vorhanden) und der Name des Kontakts sind im Ticket bereits vorausgewählt. +
 Weitere Informationen findest du auf der Handbuchseite xref:crm:ticketsystem-nutzen.adoc#[Ticketsystem].
 
-* icon:message[set=material] Messenger
+* icon:message[set=material] *Messenger*
 
-** Öffnet den Messenger. Mit einem Klick auf *Neue Nachricht* (icon:plus[role="green"]) erstellst du eine neue Nachricht für den Kontakt. +
+** Öffnet den Messenger. Mit einem Klick auf *Neue Nachricht* (icon:add[set=material]]) erstellst du eine neue Nachricht für den Kontakt. +
 Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger].
 
 // TODO:hier später die neue Messenger-Seite verlinken
 
-* icon:delete[set=material] Kontakt löschen
+* icon:delete[set=material] *Kontakt löschen*
 ** xref:crm:kontakt-bearbeiten.adoc#kontakt-loeschen[Löscht] den Kontakt nach dem Bestätigen der Sicherheitsabfrage.
 
 '''
