FIX first round of improvements relating to video pages

--- a/docs/de-de/modules/videos/pages/artikel.adoc
+++ b/docs/de-de/modules/videos/pages/artikel.adoc
@@ -5,14 +5,12 @@
 
 Bringe deine Artikel schnell ins System und starte online durch! Erfahre Step-by-Step welche Möglichkeiten die Artikelstruktur in plentymarkets bietet.
 
-[discrete]
-==== Einführung in die Artikelstruktur
+== Einführung in die Artikelstruktur
 
 * xref:videos:artikelstruktur.adoc#[Artikelstruktur und Importoptionen]
 * xref:videos:vererbung.adoc#[Vererbung]
 
-[discrete]
-==== Vorbereitende Einstellungen
+== Vorbereitende Einstellungen
 
 * xref:videos:attribute.adoc#[Attribute]
 * xref:videos:verkaufspreise.adoc#[Verkaufspreise]
@@ -20,8 +18,7 @@ Bringe deine Artikel schnell ins System und starte online durch! Erfahre Step-by
 * xref:videos:eigenschaften.adoc#[Eigenschaften]
 * xref:videos:kategorien.adoc#[Kategorien]
 
-[discrete]
-==== Import, Export und manuelle Bearbeitung
+== Import, Export und manuelle Bearbeitung
 
 * xref:videos:neue-ui.adoc#[Neue Artikel-UI (open beta)]
 * xref:videos:pflichtfelder.adoc#[Pflichtfelder und wichtige Artikeldaten]
