--- a/docs/de-de/modules/videos/pages/buchhaltung-rechnungsdokumente.adoc
+++ b/docs/de-de/modules/videos/pages/buchhaltung-rechnungsdokumente.adoc
@@ -11,4 +11,4 @@ xref:videos:rechnung.adoc#[Die Einrichtung deines Rechnungsdokumentes]
 
 xref:videos:sepa-lastschriftmandat.adoc#[Konfiguration des SEPA-Lastschriftmandats]
 
-<<videos/grundeinstellungen/buchhaltung-rechnungsdokumente/nummernkreise#, Was sind eigentlich Nummernkreise?>>
+xref:videos:nummernkreise#[Was sind eigentlich Nummernkreise?]
