--- a/docs/de-de/modules/videos/pages/grundeinstellungen.adoc
+++ b/docs/de-de/modules/videos/pages/grundeinstellungen.adoc
@@ -7,32 +7,24 @@ Wichtige Basiseinstellungen sorgen hinter den Kulissen für einen reibungslosen 
 
 == Einstieg
 
-xref:videos:unternehmensdaten.adoc#[Personalisiere dein System mit deinen Unternehmensdaten]
+* xref:videos:unternehmensdaten.adoc#[Personalisiere dein System mit deinen Unternehmensdaten]
 
 == Benutzerkonten
 
-xref:videos:passwortsicherheitsstandard.adoc#[Integriere deinen Passwort-Sicherheitsstandard in plentymarkets]
+* xref:videos:passwortsicherheitsstandard.adoc#[Integriere deinen Passwort-Sicherheitsstandard in plentymarkets]
 
 == E-Mail-Verkehr
 
-xref:videos:mailbox-org.adoc#[Lege ein neues mailbox.org E-Mail-Konto an]
-
-xref:videos:e-mail-konto-verknuepfen.adoc#[Verknüpfe dein E-Mail-Konto mit plentymarkets]
-
-xref:videos:e-mail-vorlagen.adoc#[Erstelle E-Mail-Vorlagen]
-
-<<videos/grundeinstellungen/e-mail-verkehr/template-variablen-if-konstrukte#, Was sind Template-Variablen und if-Konstrukte?>>
-
-xref:videos:automatischer-versand.adoc#[Versende E-Mails automatisch über das System]
+* xref:videos:mailboxorg.adoc#[Lege ein neues mailbox.org E-Mail-Konto an]
+* xref:videos:e-mail-konto-verknuepfen.adoc#[Verknüpfe dein E-Mail-Konto mit plentymarkets]
+* xref:videos:e-mail-vorlagen.adoc#[Erstelle E-Mail-Vorlagen]
+* xref:videos:template-variablen-if-konstrukte#[Was sind Template-Variablen und if-Konstrukte?]
+* xref:videos:automatischer-versand.adoc#[Versende E-Mails automatisch über das System]
 
 == Buchhaltung und Rechnungsdokumente
 
-xref:videos:standorte.adoc#[Standorte - Eine Einleitung]
-
-xref:videos:buchhaltung-standorte.adoc#[Arbeite mit der Buchhaltung deiner Standorte]
-
-xref:videos:rechnung.adoc#[Die Einrichtung deines Rechnungsdokumentes]
-
-xref:videos:sepa-lastschriftmandat.adoc#[Konfiguration des SEPA-Lastschriftmandats]
-
-<<videos/grundeinstellungen/buchhaltung-rechnungsdokumente/nummernkreise#, Was sind eigentlich Nummernkreise?>>
+* xref:videos:standorte.adoc#[Standorte - Eine Einleitung]
+* xref:videos:buchhaltung-standorte.adoc#[Arbeite mit der Buchhaltung deiner Standorte]
+* xref:videos:rechnung.adoc#[Die Einrichtung deines Rechnungsdokumentes]
+* xref:videos:sepa-lastschriftmandat.adoc#[Konfiguration des SEPA-Lastschriftmandats]
+* xref:videos:nummernkreise#[Was sind eigentlich Nummernkreise?]
