feat: add plentyshop name note

--- a/docs/de-de/modules/videos/pages/deine-artikel.adoc
+++ b/docs/de-de/modules/videos/pages/deine-artikel.adoc
@@ -4,6 +4,8 @@
 :author: team-webshop
 
 //tag::einleitung[]
+include::webshop:partial$plentyshop-renaming.adoc[]
+
 [cols="2, 1" grid=none]
 |===
 |Sobald dein Design steht, fehlen eigentlich nur noch deine Artikel im Shop. Sobald du diese angelegt hast, gibt dir der Shopbuilder die Möglichkeit sie als Highlight auf der Startseite zu platzieren! Wie genau das geht, erfährst du in diesem Video.
