--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -561,9 +561,9 @@
 **** xref:videos:manual-returns.adoc[Manually creating returns]
 **** xref:videos:automatic-returns.adoc[Automating returns]
 **** xref:videos:compensating-customers.adoc[Compensating customers]
-** xref:videos:online-store.adoc[Online store]
-*** xref:videos:first-step.adoc[Take the first step toward opening your online store!]
-*** xref:videos:customise-your-online-store.adoc[Customising the look of your Ceres online store]
+** xref:videos:online-store.adoc[plentyShop]
+*** xref:videos:first-step.adoc[Take the first step toward opening your plentyShop!]
+*** xref:videos:customise-your-online-store.adoc[Customising the look of your plentyShop]
 *** xref:videos:featuring-specific-items.adoc[Featuring specific items on your homepage and other pages]
 ** xref:videos:ebay.adoc[eBay]
 *** xref:videos:ebay-introduction.adoc[eBay in three easy steps]
