--- a/docs/de-de/modules/videos/pages/individualisiere-look-deines-ceres-shops.adoc
+++ b/docs/de-de/modules/videos/pages/individualisiere-look-deines-ceres-shops.adoc
@@ -1,10 +1,12 @@
-= Individualisiere den Look deines Ceres-Shops
+= Individualisiere den Look deines plentyShops
 :page-index: false
 :page-aliases: individualsiere-deinen-shop.adoc
 :id: IFGNB6B
 :author: team-webshop
 
 //tag::einleitung[]
+include::webshop:partial$plentyshop-renaming.adoc[]
+
 [cols="2, 1" grid=none]
 |===
 |Hier erfährst du, wie du deinen neuen Ceres-Webshop mit wenigen Klicks nach deinen eigenen Vorstellungen anpassen kannst. Lerne wie man Logos austauscht, Farben und Schriftarten anpasst und wie du deiner Startseite Widgets hinzufügst.
