--- a/docs/de-de/modules/videos/pages/webshop-erste-schritte.adoc
+++ b/docs/de-de/modules/videos/pages/webshop-erste-schritte.adoc
@@ -1,9 +1,11 @@
-= Erste Schritte mit deinem Online-Shop
+= Erste Schritte mit deinem plentyShop
 :page-index: false
 :id: BOIKYIL
 :author: team-webshop
 
 //tag::einleitung[]
+include::webshop:partial$plentyshop-renaming.adoc[]
+
 [cols="2, 1" grid=none]
 |===
 |Hier erfährst du, wie du die Plugins Ceres und IO deinem System hinzufügst, wie man ein Plugin-Set anlegt und wie du deinen Webshop live schalten kannst.
