--- a/docs/de-de/modules/maerkte/partials/catalogue-change-from-elastic-export.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-change-from-elastic-export.adoc
@@ -16,6 +16,11 @@ ifdef::elastic-export-catalogue-mappings[*_Tipp:_* <<#elastic-export-catalogue-m
 . Hast du im elastischen Export Artikeldaten gefiltert? Dann verwende dieselben Filter auch im Katalog. (<<#filter-export, Wie?>>)
 . Nimm die Exporteinstellungen vor. Damit erstellst du eine URL für {market}. (<<#catalogue-settings, Wie?>>)
 . Aktiviere den Katalog (<<#catalogue-activation, Wie?>>)
+ifndef::check24[]
 . Speichere die URL des Katalogs bei {market}. (<<#catalogue-url, Wie?>>)
+endif::[]
+ifdef::check24[]
+. Speichere die URL des Katalogs bei Check24. (<<#url-check24-katalog, Wie?>>)
+endif::check24[]
 
 ifdef::elastic-export-catalogue-mappings[<<#elastic-export-catalogue-mappings>> zeigt, welche Spalten im elastischen Export welchen Datenfeldern des Katalogs entsprechen.]
